k8s/frontend.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/spring-496709/finalfront:latest
          ports:
            - containerPort: 80 
---
#Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
