k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
  - host: spring.ecomp.codes
    http:
      paths:
      - path: /api       
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 9000
      - path: /          
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
